syntax = "proto3";

package tasks.v1;

import "validate/validate.proto";
import "google/api/annotations.proto";

option go_package = "final/pkg/proto/sync/final/v1;tsk1";

service Tasks {
  rpc GetTask (GetTaskRequest) returns (GetTaskResponse) {
    option (google.api.http) = {
      get: "/v1/tasks/{id}"
    };
  }

  rpc CreateTask (CreateTaskRequest) returns (CreateTaskResponse) {
    option (google.api.http) = {
      post: "/v1/tasks"
      body: "*"
    };
  }

  rpc ListTasks (ListTasksRequest) returns (ListTasksResponse) {
    option (google.api.http) = {
      get: "/v1/tasks"
    };
  }



  rpc DeleteTask (DeleteTaskRequest) returns (DeleteTaskResponse) {
    option (google.api.http) = {
      delete: "/v1/tasks/{id}"
    };
  }

  rpc DoneTask (DoneTaskRequest) returns (DoneTaskResponse) {
    option (google.api.http) = {
      put: "/v1/tasks/{id}/done"
      body: "*"
    };
  }
}

enum Status {
  STATUS_UNSPECIFIED = 0;
  STATUS_NEW = 1;
  STATUS_IN_PROGRESS = 2;
  STATUS_DONE = 3;
  STATUS_DELETED = 4;
  STATUS_ERROR = 5;
}

message Task {
  int64 id = 1;
  string title = 2;
  string content = 3;
  bool done = 4;
  Status status = 5;
}

message CreateTaskRequest {
  string title = 1 [(validate.rules).string = {min_len: 1, max_len: 100}];
  string content = 2 [(validate.rules).string = {max_len: 1000}];
}

message CreateTaskResponse {
  Task task = 1;
}

message ListTasksRequest {}

message ListTasksResponse {
  repeated Task tasks = 1;
}

message GetTaskRequest {
  int64 id = 1 [(validate.rules).int64 = {gt: 0}];
}

message GetTaskResponse {
  Task task = 1;
}

message DeleteTaskRequest {
  int64 id = 1 [(validate.rules).int64 = {gt: 0}];
}

message DeleteTaskResponse {
  bool success = 1;
}

message DoneTaskRequest {
  int64 id = 1 [(validate.rules).int64 = {gt: 0}];
}

message DoneTaskResponse {
  bool success = 1;
}


//сделал list tasks- показать все задачи, get task - одна по айди 
